--- a/zuber/src/main/resources/application.properties
+++ b/zuber/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8092
-spring.application.name="zuber_user"
+spring.application.name=zuber_user
 spring.datasource.url=jdbc:h2:mem:testuser
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
