--- a/zuber/pom.xml
+++ b/zuber/pom.xml
@@ -77,6 +77,12 @@
 			<version>2.16.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
