--- a/zuber/src/main/resources/application.properties
+++ b/zuber/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 server.port=8092
 spring.application.name=zuber_user
-spring.datasource.url=jdbc:h2:mem:testuser
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/zuber_user
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=changeme
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.liquibase.enabled=false
-spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=update
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:liquibase-changelog.xml
+spring.liquibase.drop-first=true
 
 #kafka
 spring.kafka.bootstrap-servers=localhost:9092
