--- a/zuber/src/main/resources/application.properties
+++ b/zuber/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.password=changeme
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:liquibase-changelog.xml
 spring.liquibase.drop-first=true
