logic moved to services, responses DTO, added producer services to sends kafka messages, code formatting improved

--- a/zuber/src/main/resources/application.properties
+++ b/zuber/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=postgres
 spring.datasource.password=changeme
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:liquibase-changelog.xml
